doc/pyre: changed the color of the text to {pyre@lava}

--- a/doc/pyre/config/pyre.sty
+++ b/doc/pyre/config/pyre.sty
@@ -37,6 +37,8 @@
 \setbeamercolor{itemize subitem}{fg=pyre@lightblue}
 \setbeamercolor{itemize subsubitem}{fg=pyre@leather}
 
+\setbeamercolor*{normal text}{fg=pyre@lava}
+
 % fonts
 
 % outer theme
