doc/pyre: updated the dem region illustration

--- a/doc/pyre/sections/scope.tex
+++ b/doc/pyre/sections/scope.tex
@@ -11,15 +11,13 @@
 \begin{frame}
   \frametitle{Case study: assembling a digital elevation model}
 %
-  \vskip -5ex
+  % \vskip -5ex
 %
-  \begin{columns}
-    \begin{column}{.25\textwidth}
+  \begin{columns}[c]
+    \begin{column}{.4\textwidth}
       \only<1>{
         \begin{center}
-          \fbox{
-            \includegraphics[width=.95\textwidth]{dem-california}
-          }
+          \includegraphics[width=.95\textwidth]{dem-california}
         \end{center}
       }
       \only<2>{
@@ -39,7 +37,7 @@
       }
     \end{column}
     %
-    \begin{column}{.65\textwidth}
+    \begin{column}{.5\textwidth}
       \begin{itemize}
       \item<1-> Given a region of the planet
       \item<2-> pick a few points
