doc/pyre: adjusted the color of the text

--- a/doc/pyre/config/pyre.sty
+++ b/doc/pyre/config/pyre.sty
@@ -37,7 +37,7 @@
 \setbeamercolor{itemize subitem}{fg=pyre@lightblue}
 \setbeamercolor{itemize subsubitem}{fg=pyre@leather}
 
-\setbeamercolor*{normal text}{fg=pyre@lava}
+\setbeamercolor*{normal text}{fg=pyre@shale}
 
 % fonts
 
