--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -45,6 +45,7 @@
 \definecolor{pyre@leather}{rgb}{0.48, .47, .38}
 \definecolor{pyre@olive}{rgb}{0.28, .29, .25}
 \definecolor{pyre@lava}{rgb}{0.25, .23, .22}
+\definecolor{pyre@shale}{rgb}{0.38, .38, .38}
 \definecolor{pyre@brick}{rgb}{0.95, .50, .30}
 
 \definecolor{keywordcolor}{rgb}{0.25,0.25,1.0}
