doc/pyre: started fleshing out the early sections

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -68,6 +68,7 @@
 
 \usepackage{subfigure}
 \usepackage{textcomp}
+\usepackage{siunitx}
 
 \usepackage{listings}
 \lstloadlanguages{C,C++,python,bash}
@@ -219,6 +220,11 @@
 \def\sql{{\tt SQL}}
 \def\html{{\tt html}}
 \def\th#1{\mbox{$#1^{\rm th}$}}
+
+\def\dem{{\sc dem}}
+\def\isce{{\sc isce}}
+\def\srtm{{\sc srtm}}
+\def\uml{{\sc uml}}
 
 \def\bydef{\mathrel{\mathop:}=}
 
