--- a/doc/pyre/pyre.tex
+++ b/doc/pyre/pyre.tex
@@ -12,7 +12,7 @@
 \makeatother
 
 % here we go
-\documentclass[10pt,compress,t,aspectratio169]{beamer}
+\documentclass[10pt,compress,aspectratio169]{beamer}
 
 % packages, setup, macros, etc.
 \input{setup}
@@ -52,7 +52,8 @@
 \input{epilogue}
 
 % references
-\begin{frame}[allowframebreaks]{references}
+\section{references}
+\begin{frame}[allowframebreaks,t]
   \frametitle{References}
   \bibliographystyle{unsrtnat}
   {\small \bibliography{sections/references}}
