--- a/doc/pyre/sections/applications.tex
+++ b/doc/pyre/sections/applications.tex
@@ -5,6 +5,10 @@
 % (c) 2003-2017 all rights reserved
 %
 
+\section{applications}
+
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../pyre"
