--- a/doc/pyre/sections/intro.tex
+++ b/doc/pyre/sections/intro.tex
@@ -8,6 +8,14 @@
 \section{introduction}
 
 %-----------------------------------
+\begin{frame}[c,plain]
+  \begin{center}
+    \includegraphics[width=0.75\textwidth]{pyre-logo}
+  \end{center}
+\end{frame}
+
+
+% -----------------------------------
 \begin{frame}
 %
   \frametitle{Introduction}
