--- a/doc/pyre/sections/references.bib
+++ b/doc/pyre/sections/references.bib
@@ -7,33 +7,76 @@
 %
 
 @Book{eiffel,
-title = {{Eiffel}: the language},
-author = {Meyer, B.},
-publisher = {Prentice Hall},
-year = {1992},
-isbn = {0-13-247925-7}
+  title = {{Eiffel}: the language},
+  author = {Meyer, B.},
+  publisher = {Prentice Hall},
+  year = {1992},
+  isbn = {0-13-247925-7}
 }
 
 @Book{icon,
-title = {The {ICON} programming language},
-author = {Griswold, R.~E. and Griswold, M.~T.},
-publisher = {Peer-to-Peer Communications},
-edition = {third},
-year = {1996}
+  title = {The {ICON} programming language},
+  author = {Griswold, R.~E. and Griswold, M.~T.},
+  publisher = {Peer-to-Peer Communications},
+  edition = {third},
+  year = {1996}
 }
 
+@Article{johnson-88,
+  title = {Designing Reusable Classes},
+  author = {Johnson, R.~E., and Foote, B,},
+  journal = {Journal of Object Oriented Programming},
+  volume = {1},
+  number = {2},
+  pages = {22-35},
+  year = {1988}
+}
+
+@Misc{mcilroy-69,
+  title = {Mass produced software components},
+  author = {McIlroy, M.~D.},
+  pages = {79},
+  howpublished = {Report of a conference sponsored by the {NATO} Science Committee, Garmisch,
+    Germany},
+  year = {1968}
+}
+
+
+
 @Book{meyer-97,
-title = {Object-Oriented Software Construction},
-author = {Meyer, B.},
-publisher = {Prentice Hall},
-edition = {second},
-year = {1997},
-isbn = {0-13-629155-4}
+  title = {Object-Oriented Software Construction},
+  author = {Meyer, B.},
+  publisher = {Prentice Hall},
+  edition = {second},
+  year = {1997},
+  isbn = {0-13-629155-4}
+}
+
+@Article{simula,
+  title = {SIMULA - An {ALGOL}-based Simulation Language},
+  author = {Dahl, O.-J., and Nygaard,K.},
+  journal = {Communications of the ACM},
+  volume = {9},
+  number = {9},
+  pages = {671-678},
+  year = 1966
 }
 
 @Misc{python-doc,
  title = {Python documentation},
  howpublished = {\url{http://docs.python.org}}
 }
+
+@Book{uml-2005,
+  title = {The Unified Modeling Language User Guide},
+  author = {Booch, G., and Rumbaugh, J., and Jacobson, I.},
+  publisher = {Addison-Wesley},
+  edition = {second},
+  year = {2005},
+  isbn = {978-0-321-26797-9}
+}
+
+
+
 
 % end of file
