doc/pyre: improved the case study description

--- a/doc/pyre/sections/intro.tex
+++ b/doc/pyre/sections/intro.tex
@@ -33,8 +33,8 @@
 %
     \item \pyre\ extends object oriented ideas
       \begin{itemize}
-      \item abstract base classes become {\em protocols}
-      \item appropriately decorated classes become {\em components}
+      \item abstract base classes become \emph{protocols}
+      \item appropriately decorated classes become \emph{components}
       \item design and implement by contract
       \end{itemize}
 %
