--- a/doc/pyre/sections/scope.tex
+++ b/doc/pyre/sections/scope.tex
@@ -12,9 +12,16 @@
 %
   \begin{itemize}
 %
-  \item We will write a \pyre\ application that stitches together a digital elevation model
+  \item we will write a \pyre\ application that stitches together a digital elevation model
     (\dem) by downloading tiles from the \srtm\ archive
 %
+  \item we will separate \emph{mechanism} from \emph{interface} by writing
+    \begin{itemize}
+    \item a class that knows how to interact with the \srtm\ archive
+    \item a harness that enables the user to orchestrate the interaction
+    \end{itemize}
+%
+  \item our goal is to
     \begin{itemize}
     \item become familiar with components, and their properties and behaviors
     \item describe the configuration process from the end user's point of view
@@ -23,12 +30,12 @@
       environment
     \end{itemize}
 %
-  \item Much of the code in these examples is lifted straight out of the \isce\ 3.0 source
+  \item much of the code in these examples is lifted straight out of the \isce\ 3.0 source
     code.
 %
-  \item As we go along, we will introduce notation that makes it possible to discuss
+  \item as we go along, we will introduce notation that makes it possible to discuss
     application architecture without the complexity of having to show actual source code. The
-    notation is inspired by \uml\cite{uml-2005}, but is significantly simpler.
+    notation is inspired by \uml\supercite{uml-99,uml-05}, but is significantly simpler.
 %
   \end{itemize}
 %
@@ -36,69 +43,54 @@
 
 % -----------------------------------
 \begin{frame}[t]
-  \frametitle{Case study: assembling a digital elevation model}
+  \frametitle{Stitching together a digital elevation model}
 %
-  % \vskip -5ex
-  We will write an application that stitches together a \dem\ for some region of interest. For
-  this example, we will use the \srtm\ archive. The basic idea is very simple:
-
+  \vskip -3ex
 %
-  \begin{columns}
-    \begin{column}{.4\textwidth}
-      \only<1>{
-        \begin{center}
-          \includegraphics[width=.95\textwidth]{dem-california}
-        \end{center}
-      }
-      \only<2>{
-        \begin{center}
-          \includegraphics[width=.95\textwidth]{dem-region}
-        \end{center}
-      }
-      \only<3>{
-        \begin{center}
-          \includegraphics[width=.95\textwidth]{dem-bbox}
-        \end{center}
-      }
-      \only<4->{
-        \begin{center}
-          \includegraphics[width=.95\textwidth]{dem-tiles}
-        \end{center}
-      }
-    \end{column}
-    %
-    \begin{column}{.5\textwidth}
-      \begin{itemize}
-      \item<2-> the user picks a few points in a region of interest
-      \item<3-> we compute an axis-aligned bounding box
-      \item<4-> fill the box with $1\si{\degree} \times 1\si{\degree}$ tiles
-      \item<5-> download the \dem\ tiles from the \srtm\ data store
-      \item<6-> stitch the \dem\ together
-      \end{itemize}
-    \end{column}
-    %
-  \end{columns}
+  The basic idea is very simple:
+%
+    \begin{columns}
+      \begin{column}{.4\textwidth}
+        \only<1>{
+          \begin{center}
+            \includegraphics[width=\textwidth]{dem-california}
+          \end{center}
+        }
+        \only<2>{
+          \begin{center}
+            \includegraphics[width=\textwidth]{dem-region}
+          \end{center}
+        }
+        \only<3>{
+          \begin{center}
+            \includegraphics[width=\textwidth]{dem-bbox}
+          \end{center}
+        }
+        \only<4->{
+          \begin{center}
+            \includegraphics[width=\textwidth]{dem-tiles}
+          \end{center}
+        }
+      \end{column}
+%
+      \begin{column}{.6\textwidth}
+        \begin{itemize}
+        \item<2-> the user picks a few points in a region of interest
+        \item<3-> we compute an axis-aligned bounding box
+        \item<4-> fill the box with $1\si{\degree} \times 1\si{\degree}$ tiles
+        \item<5-> download the \dem\ tiles from the \srtm\ data store
+        \item<6-> stitch the \dem\ together and drop it somewhere on the filesystem
+        \end{itemize}
+      \end{column}
+%
+    \end{columns}
 
-  \only<7->{A key aspect of the process is to identify which decisions are best left to the end
-    user, and therefore become configuration options for our app.}
-
+    \only<7->{ \vskip 2ex Transforming the idea into an actual running program will require
+      more information, and many decisions.  A key aspect of the design process is to identify
+      which decisions are best left to the end user, and therefore become configuration options
+      for our app.}
 %
 \end{frame}
-
-%-----------------------------------
-\begin{frame}
-%
-  \frametitle{Outline of the implementation}
-%
-%
-  \begin{itemize}
-%
-  \item
-%
-  \end{itemize}
-%
-\end{frame}
-
 
 %%% Local Variables:
 %%% mode: latex
