--- a/doc/pyre/sections/references.bib
+++ b/doc/pyre/sections/references.bib
@@ -6,7 +6,22 @@
 % (c) 1998-2017 all rights reserved
 %
 
-@Book{eiffel,
+% books
+@book{agile,
+  title = {Agile and iterative development: a manager's guide},
+  author = {Larman, C.},
+  publisher = {Addison-Wesley},
+  year = {2004}
+}
+
+@book{c++-idioms,
+  title = {Advanced \cpp\ Programming Styles and Idioms},
+  author = {Coplien, J.~O.},
+  publisher = {Addison-Wesley},
+  year = {1992}
+}
+
+@book{eiffel,
   title = {{Eiffel}: the language},
   author = {Meyer, B.},
   publisher = {Prentice Hall},
@@ -14,7 +29,7 @@
   isbn = {0-13-247925-7}
 }
 
-@Book{icon,
+@book{icon,
   title = {The {ICON} programming language},
   author = {Griswold, R.~E. and Griswold, M.~T.},
   publisher = {Peer-to-Peer Communications},
@@ -22,28 +37,14 @@
   year = {1996}
 }
 
-@Article{johnson-88,
-  title = {Designing Reusable Classes},
-  author = {Johnson, R.~E., and Foote, B,},
-  journal = {Journal of Object Oriented Programming},
-  volume = {1},
-  number = {2},
-  pages = {22-35},
-  year = {1988}
+@book{metaclasses,
+title = {Putting Metaclasses to Work},
+author = {Forman, I.~R. and Danforth, S.~H.},
+publisher = {Addison-Wesley},
+year = {1998}
 }
 
-@Misc{mcilroy-69,
-  title = {Mass produced software components},
-  author = {McIlroy, M.~D.},
-  pages = {79},
-  howpublished = {Report of a conference sponsored by the {NATO} Science Committee, Garmisch,
-    Germany},
-  year = {1968}
-}
-
-
-
-@Book{meyer-97,
+@book{meyer-97,
   title = {Object-Oriented Software Construction},
   author = {Meyer, B.},
   publisher = {Prentice Hall},
@@ -52,7 +53,31 @@
   isbn = {0-13-629155-4}
 }
 
-@Article{simula,
+@book{patterns,
+  title = {Design patterns},
+  author = {Gamma, E. and Helm, R. and Johnson, R. and Vlissides, J.},
+  publisher = {Addison-Wesley},
+  year = {1995}
+}
+
+@book{uml-99,
+title = {The Unified Software Development Process},
+author = {Jacobson, I. and Booch, G. and Rumbaugh, J.},
+publisher = {Addison-Wesley},
+year = {1999}
+}
+
+@book{uml-05,
+  title = {The Unified Modeling Language User Guide},
+  author = {Booch, G., and Rumbaugh, J., and Jacobson, I.},
+  publisher = {Addison-Wesley},
+  edition = {second},
+  year = {2005},
+  isbn = {978-0-321-26797-9}
+}
+
+% papers
+@article{dahl-66,
   title = {SIMULA - An {ALGOL}-based Simulation Language},
   author = {Dahl, O.-J., and Nygaard,K.},
   journal = {Communications of the ACM},
@@ -62,21 +87,44 @@
   year = 1966
 }
 
-@Misc{python-doc,
+@article{johnson-88,
+  title = {Designing Reusable Classes},
+  author = {Johnson, R.~E., and Foote, B,},
+  journal = {Journal of Object Oriented Programming},
+  volume = {1},
+  number = {2},
+  pages = {22-35},
+  year = {1988}
+}
+
+@misc{mcilroy-69,
+  title = {Mass produced software components},
+  author = {McIlroy, M.~D.},
+  pages = {79},
+  howpublished = {Report of a conference sponsored by the {NATO} Science Committee, Garmisch,
+    Germany},
+  year = {1968}
+}
+
+% others
+
+@misc{guido-metaclasses,
+ title = {Metaclasses and Extension Classes, (a.k.a.~``{T}he {K}iller {J}oke'')},
+ howpublished =
+ {\url{http://python-history.blogspot.com/2009/04/metaclasses-and-extension-classes-aka.html}}
+}
+
+@misc{python-doc,
  title = {Python documentation},
  howpublished = {\url{http://docs.python.org}}
 }
 
-@Book{uml-2005,
-  title = {The Unified Modeling Language User Guide},
-  author = {Booch, G., and Rumbaugh, J., and Jacobson, I.},
-  publisher = {Addison-Wesley},
-  edition = {second},
-  year = {2005},
-  isbn = {978-0-321-26797-9}
+@misc{wiki-xxx,
+  author = {Wikipedia},
+  title = {Some article},
+  year = {xxxx},
+  howpublished = {\url{https://en.wikipedia.org/xxxx}},
+  note = {[Online; accessed dd-mm-yyyy]}
 }
-
-
-
 
 % end of file
