doc/pyre: new {supercite} macro for cleaner citation rendering

--- a/doc/pyre/config/setup.tex
+++ b/doc/pyre/config/setup.tex
@@ -198,6 +198,9 @@
 \def\lstref#1{{Listing~\ref{lst:#1}}}
 \def\lstlineref#1{{line~\ref{line:#1}}}
 
+\def\supercite#1{\mbox{\scriptsize\raise 1.0ex\hbox{\cite{#1}}}}
+%\def\cpp{\mbox{\tt C\raise.4ex\hbox{++}}}
+
 % macros
 \def\href#1{{\footnotesize\bfseries\url{#1}}}
 \def\defeq{\mathrel{\mathop:}=}
