doc/pyre: improved the illisutrations of compact property declarations and  bound properties

--- a/doc/pyre/sections/components.tex
+++ b/doc/pyre/sections/components.tex
@@ -334,15 +334,21 @@ class SRTM(isce.component):
 %
   \begin{itemize}
 %
-  \item Sometimes we need to communicate the values to which properties are bound:
-
-      \includegraphics[height=20ex]{srtm-properties-bound}
-
-  \item a more compact alternative to the property declarations
-
-      \includegraphics[height=10ex]{srtm-properties-compact}
-
-    for when we don't care to show the binding slots
+  \item when we don't care to show the binding slots, here is a more compact alternative to the
+    property declarations
+%
+    \begin{center}
+      \includegraphics[width=50ex]{srtm-properties-compact}
+    \end{center}
+%
+%
+  \item sometimes we need to communicate the values to which properties are bound
+%
+    \begin{center}
+      \includegraphics[width=50ex]{srtm-properties-bound}
+    \end{center}
+%
+    note the new arrow type
 %
   \end{itemize}
 %
